# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import quizRouter from "./quiz";
 import adminRouter from "./admin";
 import authRouter from "./auth";
 import profileRouter from "./profile";
+import feedbackRouter from "./feedback";
 
 const router: IRouter = Router();
 router.use(healthRouter);
@@ -11,4 +12,5 @@ router.use(quizRouter);
 router.use(adminRouter);
 router.use(authRouter);
 router.use(profileRouter);
+router.use(feedbackRouter);
 export default router;
